# vlang

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE.txt
include/: Ast.h  Declaration.h  IdentifierTable.h  Lexer.h  Namespace.h  Parser.h  ParserResult.h  Semantic.h  SemanticTypes.h  Tokens.def  Tokens.h  Type.h
include/vlang/: CMakeLists.txt
lib/: Ast.cpp  CMakeLists.txt  Declaration.cpp  IdentifierTable.cpp  Lexer.cpp  Namespace.cpp  Parser.cpp  ParserDecl.cpp  ParserExpr.cpp  Semantic.cpp  Tokens.cpp  Type.cpp
lib/Basic/: CMakeLists.txt  CharInfo.cpp  Diagnostic.cpp  DiagnosticIDs.cpp  FileManager.cpp  FileSystemStatCache.cpp  IdentifierTable.cpp  LangOptions.cpp  OperatorPrecedence.cpp  SourceLocation.cpp  SourceManager.cpp  Systask.cpp  TargetInfo.cpp  Targets.cpp  TokenKinds.cpp  Version.cpp  VersionTuple.cpp
lib/Diag/: CMakeLists.txt  ChainedDiagnosticConsumer.cpp  Diagnostic.cpp  (+8 more)
lib/Frontend/: CMakeLists.txt  ChainedDiagnosticConsumer.cpp  DiagnosticRenderer.cpp  HeaderIncludeGen.cpp  InitHeaderSearch.cpp  InitPreprocessor.cpp  LogDiagnosticPrinter.cpp  SerializedDiagnosticPrinter.cpp  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp  VerifyDiagnosticConsumer.cpp
lib/Lex/: CMakeLists.txt  HeaderMap.cpp  HeaderSearch.cpp  Lexer.cpp  LiteralSupport.cpp  MacroArgs.cpp  MacroInfo.cpp  PPCaching.cpp  PPCallbacks.cpp  PPDirectives.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  PreprocessingRecord.cpp  Preprocessor.cpp  PreprocessorLexer.cpp  ScratchBuffer.cpp  TokenLexer.cpp  UnicodeCharSets.h
tools/: CMakeLists.txt  main.cpp
(+112 files in other folders)
